--- a/about.html
+++ b/about.html
@@ -8,14 +8,14 @@
     @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@400;600;700&family=Audiowide&display=swap');
 
     :root {
-      --primary-color: #0f172a;
-      --secondary-color: #312e81;
-      --background-color: #020617;
-      --card-bg: #1e293b;
-      --text-color: #f1f5f9;
-      --accent-color: #8b5cf6;
-      --accent-hover: #7c3aed;
-      --highlight-color: #06b6d4;
+      --primary-color: #e0f2fe; /* Soft sky blue */
+      --secondary-color: #c7d2fe; /* Soft indigo */
+      --background-color: #f8fafc; /* Very light gray-blue */
+      --card-bg: #f1f5f9; /* Light slate */
+      --text-color: #1e293b; /* Dark slate */
+      --accent-color: #a78bfa; /* Light purple */
+      --accent-hover: #c4b5fd; /* Softer purple */
+      --highlight-color: #67e8f9; /* Soft cyan */
       --neon-glow: 0 0 10px rgba(139, 92, 246, 0.5), 0 0 20px rgba(139, 92, 246, 0.3);
       --text-glow: 0 0 2px rgba(139, 92, 246, 0.8);
     }
@@ -30,9 +30,6 @@
       margin: 0;
       font-family: 'Rajdhani', sans-serif;
       background-color: var(--background-color);
-      background-image: 
-        radial-gradient(circle at 25% 25%, rgba(139, 92, 246, 0.1) 0%, transparent 50%),
-        radial-gradient(circle at 75% 75%, rgba(6, 182, 212, 0.1) 0%, transparent 50%);
       color: var(--text-color);
       min-height: 100vh;
       display: flex;
@@ -41,60 +38,8 @@
       overflow-x: hidden;
     }
 
-    body::before {
-      content: "";
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%238b5cf6' fill-opacity='0.05'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-      z-index: -1;
-      opacity: 0.5;
-      pointer-events: none;
-    }
-
-    a {
-      color: var(--text-color);
-      text-decoration: none;
-      font-weight: 600;
-      font-size: 1rem;
-      padding: 0.5rem 1rem;
-      border-radius: 6px;
-      transition: all 0.3s ease;
-      position: relative;
-      overflow: hidden;
-      min-height: 48px;
-      min-width: 48px;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    a::before {
-      content: '';
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 0;
-      height: 2px;
-      background-color: var(--accent-color);
-      transition: width 0.3s ease;
-    }
-
-    a:hover::before, a:focus::before {
-      width: 100%;
-    }
-
-    a:hover, a:focus {
-      color: var(--accent-color);
-      text-shadow: var(--text-glow);
-      outline: none;
-      transform: translateY(-2px);
-    }
-
     header {
-      background-color: rgba(15, 23, 42, 0.8);
+      background-color: rgba(255, 255, 255, 0.8);
       backdrop-filter: blur(10px);
       padding: 1rem 2rem;
       display: flex;
@@ -134,20 +79,22 @@
     }
 
     nav a { 
-      position: relative;
-      margin-left: 0.5rem;
-      border: 1px solid transparent;
+      color: var(--text-color);
+      text-decoration: none;
+      font-weight: 600;
+      padding: 0.5rem 1rem;
+      border-radius: 6px;
+      transition: all 0.3s ease;
     }
 
     nav a.active { 
-      background-color: rgba(139, 92, 246, 0.2);
-      border: 1px solid var(--accent-color);
-      box-shadow: var(--neon-glow);
-      color: var(--accent-color);
+      background-color: var(--accent-hover);
+      color: white;
     }
 
-    nav a:not(.active):hover {
-      background-color: rgba(139, 92, 246, 0.1);
+    nav a:hover {
+      background-color: var(--accent-color);
+      color: white;
     }
 
     main {
@@ -168,16 +115,6 @@
       border: 1px solid rgba(139, 92, 246, 0.2);
       position: relative;
       overflow: hidden;
-    }
-
-    section::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 4px;
-      background: linear-gradient(90deg, var(--accent-color), var(--highlight-color));
     }
 
     section h2 {
@@ -238,23 +175,11 @@
       transform: scale(1.05);
     }
 
-    .profile-pic::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: linear-gradient(135deg, rgba(139, 92, 246, 0.2), transparent 80%);
-      z-index: 1;
-      pointer-events: none;
-    }
-
     dl {
       display: grid;
       grid-template-columns: auto 1fr;
       gap: 1rem 1.5rem;
-      background-color: rgba(15, 23, 42, 0.5);
+      background-color: rgba(255, 255, 255, 0.8);
       padding: 1.5rem;
       border-radius: 8px;
       border: 1px solid rgba(139, 92, 246, 0.2);
@@ -311,28 +236,6 @@
       align-items: center;
     }
 
-    .skill-card::before {
-      content: '';
-      position: absolute;
-      top: -2px;
-      left: -2px;
-      right: -2px;
-      bottom: -2px;
-      background: linear-gradient(45deg, var(--accent-color), var(--highlight-color), var(--accent-color));
-      z-index: -1;
-      border-radius: 10px;
-      opacity: 0;
-      transition: opacity 0.3s ease;
-    }
-
-    .skill-card:hover {
-      transform: translateY(-5px);
-    }
-
-    .skill-card:hover::before {
-      opacity: 1;
-    }
-
     .skill-icon {
       font-size: 2rem;
       margin-bottom: 0.5rem;
@@ -364,7 +267,7 @@
     }
 
     footer {
-      background-color: rgba(15, 23, 42, 0.9);
+      background-color: rgba(255, 255, 255, 0.8);
       text-align: center;
       color: var(--text-color);
       font-size: 0.9rem;
@@ -408,17 +311,6 @@
       background-color: var(--accent-color);
       transform: translateY(-3px);
       box-shadow: var(--neon-glow);
-    }
-
-    /* Animation keyframes */
-    @keyframes pulse {
-      0% { opacity: 0.6; }
-      50% { opacity: 1; }
-      100% { opacity: 0.6; }
-    }
-
-    .animate-pulse {
-      animation: pulse 2s infinite ease-in-out;
     }
 
     /* Responsive Breakpoints */
@@ -711,7 +603,7 @@
         
         <div class="skill-card">
           <div class="skill-icon">👥</div>
-          <div class="skill-name">Team Play</div>
+          <div class=" skill-name">Team Play</div>
           <div class="rank-badge">Advanced</div>
         </div>
       </div>
